--- a/composer.json
+++ b/composer.json
@@ -21,5 +21,7 @@
         }
     },
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "php": "^7.3|^8.0|^8.1"
+    }
 }
